--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <application
         android:name=".app.CriminalIntentApplication"
         android:allowBackup="false"
@@ -24,6 +26,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <provider
+            android:authorities="com.will.criminalintent.fileprovider"
+            android:name="androidx.core.content.FileProvider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/files"/>
+        </provider>
+        <!--authorities 属性值在整个系统里要有唯一性，习惯做法是加包名
+        exported = false 意味着 除了自己和授权的人，其他人不允许使用 FileProvider
+        grantUriPermissions 属性用来给其他应用授权-->
 
         <activity android:name=".TestActivity"
             android:exported="true"
@@ -43,6 +56,16 @@
 <!--                <category android:name="android.intent.category.LAUNCHER" />-->
 <!--            </intent-filter>-->
         </activity>
+        <activity android:name=".LocationActivity"
+            android:exported="true"
+            android:theme="@style/Theme.CriminalIntent">
+        </activity>
     </application>
 
+    <!--一加手机要加这个权限-->
+    <queries>
+        <intent>
+            <action android:name="android.media.action.IMAGE_CAPTURE" />
+        </intent>
+    </queries>
 </manifest>
