--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!--拍照功能声明 添加 uses-feature 标签，这样 Android 系统就会知道，require 属性设为 false，
+    如果为 true，应用就无法支持那些无此功能的设备了，但是这个应用即使没有相机，也不会导致应用功能缺失，可以正常安装和使用 -->
+    <uses-feature android:name="android.hardware.camera" android:required="false"/>
+    <!--读取联系人权限-->
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <!--GPS 定位权限-->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <application
